# zmq-protobuf-test

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  client.cpp  conanfile.txt  message.proto  server.cpp
.travis/: install.sh
divide_and_conquer/: CMakeLists.txt  exec.sh  tasksink.cpp  taskvent.cpp  taskwork.cpp
request_reply/: CMakeLists.txt  conanfile.txt  hwclient.cpp  hwserver.cpp
test/: CMakeLists.txt
test/syntactic_checks/: CMakeLists.txt
weather_update/: CMakeLists.txt  wuserver.cpp
